fix window resize when keyboard appears on iOS

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@ html {
   position: fixed;
   top: 0;
   left: 0;
+  transform: scale(1);
   background: $page-background;
 }
 
